updated the application logo

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/web-analysis.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ApnaManager</title>
 </head>
